Add R6 to list of CI packages, add missing haven on mac and windows

--- a/.github/workflows/test-macos.yml
+++ b/.github/workflows/test-macos.yml
@@ -38,6 +38,8 @@ jobs:
             data.table
             rstudioapi
             tibble
+            haven
+            R6
 
       - name: Build
         run: |
