--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -25,6 +25,11 @@ jobs:
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2
 
+      - name: Install nextest
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-nextest
+
       - name: Install R
         uses: r-lib/actions/setup-r@v2
         with:
@@ -43,9 +48,10 @@ jobs:
 
       - name: Build
         run: |
-            cargo build
+          cargo build
 
-      - name: Run Unit Tests
-        # Very loud on windows CI, which has been a source of instability
+      - name: Run Tests
+        env:
+          NEXTEST_PROFILE: "ci"
         run: |
-            cargo test -vv -- --nocapture
+          cargo nextest run
