Enable format on save in Zed

--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -1,5 +1,8 @@
 {
     "languages": {
+        "Rust": {
+            "format_on_save": "on"
+        },
         "R": {
             "hard_tabs": false,
             "tab_size": 4,
