shut down gracefully if parent exits

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,9 @@
             "osx": {
                 "program": "ark"
             },
+            "linux": {
+                "program": "ark"
+            },
             "windows": {
                 "program": "ark.exe"
             },
