--- a/crates/ark/Cargo.toml
+++ b/crates/ark/Cargo.toml
@@ -66,6 +66,7 @@ tracing-error = "0.2.0"
 insta = { version = "1.39.0" }
 stdext = { path = "../stdext", features = ["testing"] }
 tempfile = "3.13.0"
+assert_matches = "1.5.0"
 
 [build-dependencies]
 cc = "1.1.22"
