Add `program` at top-level for Zed

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
             "name": "Attach: ark",
             "type": "lldb",
             "request": "attach",
+            "program": "ark",
             "osx": {
                 "program": "ark"
             },
