--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -61,6 +61,7 @@ jobs:
         with:
           packages:
             data.table
+            dplyr
             rstudioapi
             tibble
             haven
