--- a/.github/workflows/test-macos.yml
+++ b/.github/workflows/test-macos.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           packages:
             data.table
+            dplyr
             rstudioapi
             tibble
             haven
