--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -41,6 +41,7 @@ jobs:
         with:
           packages:
             data.table
+            dplyr
             rstudioapi
             tibble
             haven
