--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -31,10 +31,10 @@ jobs:
           tool: cargo-nextest
 
       - name: Install R
-        uses: r-lib/actions/setup-r@v2
-        with:
-          r-version: ${{ matrix.config.r }}
-          use-public-rspm: true
+        run: |
+          curl -L -o R-installer.exe https://www.r-project.org/nosvn/winutf8/aarch64/R-4-signed/R-4.5.1-aarch64.exe
+          Start-Process -Wait -FilePath .\R-installer.exe -ArgumentList '/VERYSILENT', '/DIR=C:\R'
+          echo "C:\R\bin" >> $env:GITHUB_PATH
 
       - name: Install R Packages Required For Tests
         uses: r-lib/actions/setup-r-dependencies@v2
