--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -13,7 +13,7 @@ on:
 jobs:
     build_windows:
         name: Build Windows
-        runs-on: ${{ matrix.arch == 'arm64' && 'windows-11-arm' || 'windows-latest' }}
+        runs-on: ${{ matrix.runs_on }}
         timeout-minutes: 40
 
         env:
@@ -26,8 +26,10 @@ jobs:
                 flavor: [debug, release]
                 include:
                     - arch: x64
+                      runs_on: windows-latest
                       rust_target_prefix: x86_64
                     - arch: arm64
+                      runs_on: windows-11-arm
                       rust_target_prefix: aarch64
 
         steps:
