--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -6,14 +6,21 @@ on:
 
 jobs:
   windows:
-    runs-on: ${{ matrix.arch == 'arm64' && 'windows-11-arm' || 'windows-latest' }}
+    runs-on: ${{ matrix.runs_on }}
     name: "Rust: ${{ matrix.config.rust }}, R: ${{ matrix.config.r }}, Arch: ${{ matrix.arch }}"
+
     strategy:
       fail-fast: false
       matrix:
         arch: [x64, arm64]
         config:
           - { rust: 'stable', r: 'release' }
+        include:
+          - arch: x64
+            runs_on: windows-latest
+          - arch: arm64
+            runs_on: windows-11-arm
+
     timeout-minutes: 30
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
