--- a/.github/workflows/release-macos.yml
+++ b/.github/workflows/release-macos.yml
@@ -45,6 +45,11 @@ jobs:
                 rustup update --no-self-update stable
                 rustup default stable
 
+            - name: Set macOS 10.15 deployment target
+              run: |
+                echo "MACOSX_DEPLOYMENT_TARGET=10.15" >> $GITHUB_ENV
+                echo "RUSTFLAGS=-C link-args=-mmacosx-version-min=10.15" >> $GITHUB_ENV
+
             - name: Setup for x86 cross-compiling
               if: matrix.arch == 'x64'
               run: |
