--- a/.github/workflows/release-macos.yml
+++ b/.github/workflows/release-macos.yml
@@ -45,10 +45,10 @@ jobs:
                 rustup update --no-self-update stable
                 rustup default stable
 
-            - name: Set macOS 10.15 deployment target
+            - name: Set macOS 11 deployment target
               run: |
-                echo "MACOSX_DEPLOYMENT_TARGET=10.15" >> $GITHUB_ENV
-                echo "RUSTFLAGS=-C link-args=-mmacosx-version-min=10.15" >> $GITHUB_ENV
+                echo "MACOSX_DEPLOYMENT_TARGET=11" >> $GITHUB_ENV
+                echo "RUSTFLAGS=-C link-args=-mmacosx-version-min=11" >> $GITHUB_ENV
 
             - name: Setup for x86 cross-compiling
               if: matrix.arch == 'x64'
