--- a/crates/ark/Cargo.toml
+++ b/crates/ark/Cargo.toml
@@ -22,6 +22,8 @@ crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
 ctor = "0.1.26"
 dap = { git = "https://github.com/sztomi/dap-rs", branch = "main" }
 dashmap = "5.4.0"
+aether_parser = { git = "https://github.com/posit-dev/air", package = "air_r_parser" }
+aether_syntax = { git = "https://github.com/posit-dev/air", package = "air_r_syntax" }
 ego-tree = "0.6.2"
 harp = { path = "../harp" }
 http = "0.2.9"
@@ -44,10 +46,11 @@ scraper = "0.15.0"
 serde = { version = "1.0.183", features = ["derive"] }
 serde_json = { version = "1.0.94", features = ["preserve_order"] }
 stdext = { path = "../stdext" }
+streaming-iterator = "0.1.9"
 tokio = { version = "1.26.0", features = ["full"] }
 tower-lsp = "0.19.0"
-tree-sitter = "0.23.0"
-tree-sitter-r = { git = "https://github.com/r-lib/tree-sitter-r", rev = "95aff097aa927a66bb357f715b58cde821be8867" }
+tree-sitter = "0.24.7"
+tree-sitter-r = { git = "https://github.com/r-lib/tree-sitter-r", rev = "daa26a2ff0d9546e9125c7d8bcec046027f02070" }
 uuid = "1.3.0"
 url = "2.4.1"
 walkdir = "2"
