--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,6 @@ rust-version = "1.89"
 edition = "2021"
 license = "MIT"
 authors = ["Posit Software, PBC"]
+
+[workspace.dependencies]
+biome_line_index = { git = "https://github.com/biomejs/biome", rev = "c13fc60726883781e4530a4437724273b560c8e0" }
