--- a/crates/ark/Cargo.toml
+++ b/crates/ark/Cargo.toml
@@ -25,6 +25,7 @@ dap = { git = "https://github.com/sztomi/dap-rs", branch = "main" }
 dashmap = "5.4.0"
 aether_parser.workspace = true
 aether_syntax.workspace = true
+aether_lsp_utils.workspace = true
 ego-tree = "0.6.2"
 harp = { path = "../harp" }
 http = "0.2.9"
@@ -48,7 +49,7 @@ serde_json = { version = "1.0.94", features = ["preserve_order"] }
 stdext = { path = "../stdext" }
 streaming-iterator = "0.1.9"
 tokio = { version = "1.26.0", features = ["full"] }
-tower-lsp = "0.19.0"
+tower-lsp.workspace = true
 tree-sitter = "0.24.7"
 tree-sitter-r = { git = "https://github.com/r-lib/tree-sitter-r", rev = "daa26a2ff0d9546e9125c7d8bcec046027f02070" }
 uuid = "1.3.0"
