--- a/crates/amalthea/Cargo.toml
+++ b/crates/amalthea/Cargo.toml
@@ -34,6 +34,7 @@ serde_with = "3.0.0"
 serde_repr = "0.1.17"
 tracing = "0.1.40"
 assert_matches = "1.5.0"
+url = "2.5.7"
 
 [dev-dependencies]
 env_logger = "0.10.0"
