--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,7 +83,7 @@ jobs:
     create_release:
         name: Create Release
         runs-on: ubuntu-latest
-        needs: [do_release, get_version, build_macos, repackage_signed_windows, build_linux]
+        needs: [do_release, get_version, build_macos, build_windows, build_linux]
         env:
             GITHUB_TOKEN: ${{ github.token }}
         steps:
