--- a/.github/workflows/test-macos.yml
+++ b/.github/workflows/test-macos.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Install R Packages Required For Tests
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
+          dependencies: '"hard"'
           packages:
             data.table
             dplyr
