Add ark-lsp: standalone static R language server for VS Code and Zed
- New ark-lsp crate with minimal dependencies (no harp/libr/amalthea)
- Static R environment discovery without loading R runtime
- LSP features: folding, selection, symbols, diagnostics, completions,
  hover, signature help, goto definition, auto-indent
- VS Code extension with bundled binary support
- Zed editor configuration
- Package metadata parsing for installed R packages

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ resolver = "2"
 members = [
     "crates/amalthea",
     "crates/ark",
+    "crates/ark-lsp",
     "crates/echo",
     "crates/harp",
     "crates/libr",
