Draft DAP protocol tests

--- a/crates/ark/Cargo.toml
+++ b/crates/ark/Cargo.toml
@@ -27,7 +27,7 @@ bus = "2.3.0"
 cfg-if = "1.0.0"
 crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
 ctor = "0.1.26"
-dap = { git = "https://github.com/sztomi/dap-rs", branch = "main" }
+dap = { git = "https://github.com/sztomi/dap-rs", branch = "main", features = ["client"] }
 dashmap = "5.4.0"
 ego-tree = "0.6.2"
 harp = { path = "../harp" }
