Move test fixtures to dev-only crate

--- a/crates/ark/Cargo.toml
+++ b/crates/ark/Cargo.toml
@@ -27,7 +27,7 @@ bus = "2.3.0"
 cfg-if = "1.0.0"
 crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
 ctor = "0.1.26"
-dap = { git = "https://github.com/sztomi/dap-rs", branch = "main", features = ["client"] }
+dap = { git = "https://github.com/sztomi/dap-rs", branch = "main" }
 dashmap = "5.4.0"
 ego-tree = "0.6.2"
 harp = { path = "../harp" }
@@ -70,6 +70,7 @@ rustc-hash = "2.1.1"
 tracing-error = "0.2.0"
 
 [dev-dependencies]
+ark_test = { path = "../ark_test" }
 insta = { version = "1.39.0" }
 stdext = { path = "../stdext", features = ["testing"] }
 tempfile = "3.13.0"
