--- a/crates/ark_test/Cargo.toml
+++ b/crates/ark_test/Cargo.toml
@@ -20,5 +20,6 @@ log = "0.4.17"
 serde = { version = "1.0.183", features = ["derive"] }
 serde_json = "1.0.94"
 stdext = { path = "../stdext" }
+tempfile = "3"
 tree-sitter = "0.24.7"
 uuid = "1.3.0"
