CommSocket uses CommOutgoingTx for IOPub routing
Establish the ordering guarantee - comm messages now go through IOPub:

- Introduce CommOutgoingTx wrapper that routes through IOPub
- CommSocket::new takes iopub_tx, remove outgoing_rx field
- Update ServerComm, ServerHandler trait to use CommOutgoingTx
- CommManager no longer polls outgoing_rx (comms route directly)
- Ark-side: use Console::get_iopub_tx() for CommSocket creation
- Add IOPubReceiverExt helper trait to ark_test
- Update all test files to use iopub_rx.recv_comm_msg()

The ordering guarantee is now active: comm messages and other IOPub
messages (like ExecuteResult) go through the same channel.

--- a/crates/ark_test/Cargo.toml
+++ b/crates/ark_test/Cargo.toml
@@ -14,6 +14,7 @@ rust-version.workspace = true
 amalthea = { path = "../amalthea" }
 anyhow = "1.0.80"
 ark = { path = "../ark" }
+crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
 dap = { git = "https://github.com/sztomi/dap-rs", branch = "main", features = ["client"] }
 harp = { path = "../harp" }
 log = "0.4.17"
