--- a/crates/ark_test/Cargo.toml
+++ b/crates/ark_test/Cargo.toml
@@ -22,5 +22,6 @@ serde = { version = "1.0.183", features = ["derive"] }
 serde_json = "1.0.94"
 stdext = { path = "../stdext" }
 tempfile = "3"
+regex = "1"
 tree-sitter = "0.24.7"
 uuid = "1.3.0"
